--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
           <li><a href="about.html" class="active">About Us</a></li>
 
           <li class="dropdown">
-            <a href="admissions.html"><span>Admissions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+            <a href="#"><span>Admissions</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
               <li><a href="admissions.html">Admission Process</a></li>
               <li><a href="fees.html">Fees</a></li>
@@ -378,14 +378,14 @@
                         <li><i class="bi bi-check-circle-fill"></i> Advanced technology centers</li>
                       </ul>
                     </div>
+                    
                   </div>
                 </div>
                 <div class="col-md-5" data-aos="fade-left" data-aos-delay="200">
                   <div class="facility-cards">
                     <div class="facility-card">
-                      <div class="icon-container">
-                        <i class="bi bi-book-half"></i>
-                      </div>
+                      <img src="assets/img/education/facilities/dinig-hall.jpeg" alt="Dining Hall"
+                        class="img-fluid rounded mb-3">
                       <h4>Library</h4>
                       <p>Our extensive library houses thousands of books and digital resources to support student
                         research and reading.</p>
@@ -393,9 +393,8 @@
                     </div>
 
                     <div class="facility-card">
-                      <div class="icon-container">
-                        <i class="bi bi-pc-display"></i>
-                      </div>
+                      <img src="assets/img/education/facilities/computer-lab-1.jpeg" alt="Dining Hall"
+                        class="img-fluid rounded mb-3">
                       <h4>Computer Labs</h4>
                       <p>Equipped with high-speed computers and software for digital learning and coding programs.</p>
                       <span class="info-badge"><i class="bi bi-info-circle"></i> 5 Labs</span>
@@ -430,6 +429,8 @@
                     </div>
                   </div>
                 </div>
+
+
                 <div class="col-md-5" data-aos="fade-left" data-aos-delay="200">
                   <div class="facility-cards">
                     <div class="facility-card">
@@ -569,9 +570,9 @@
               </div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="300">
-              <img src="assets/img/education/campus-9.webp" alt="Dormitory" class="img-fluid" loading="lazy">
+              <img src="assets/img/education/facilities/lab-facility.jpeg" alt="Dormitory" class="img-fluid" loading="lazy">
               <div class="gallery-overlay">
-                <h4>Dormitories</h4>
+                <h4>School Laboratory</h4>
               </div>
             </div>
             <div class="gallery-item" data-aos="zoom-in" data-aos-delay="400">
