--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 					<li><a href="about.html" class="active">About Us</a></li>
 
 					<li class="dropdown">
-						<a href="admissions.html"><span>Admissions</span> <i
+						<a href="#"><span>Admissions</span> <i
 								class="bi bi-chevron-down toggle-dropdown"></i></a>
 						<ul>
 							<li><a href="admissions.html">Admission Process</a></li>
