--- a/fees.html
+++ b/fees.html
@@ -149,7 +149,7 @@
                         </ul>
                     </li>
                     <li class="dropdown">
-                        <a href="academics.html"><span>Academics</span> <i
+                        <a href="academics.html"><span>Education</span> <i
                                 class="bi bi-chevron-down toggle-dropdown"></i></a>
                         <ul>
                             <li><a href="academics.html">Academics</a></li>
